# core-enginev2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  OWNERS  README.md  debug_price_path.py  docker-compose.sdk.yml  docker-compose.yml  generate_100m_preset.py  generate_sdk.py  pyproject.toml
.github/workflows/: sdk-generation.yml
ci/: pr.yml
docs/: arch_overview.md
docs/Auditapr24/: simulation_config_schema.md
docs/frontend/: IMPLEMENTATION_PLAN.md  PARAMETER_TRACKING.md  QUICKSTART.md  README.md  TYPESCRIPT_SDK_GUIDE.md  WEBSOCKET_API.md
docs/module_contracts/: config_loader.md
docs/sdk/: README.md
frontend/: .eslintrc.cjs  .gitignore  README.md  copy-sdk.sh  generate-types.js  index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  store.ts  vite-env.d.ts
infra/prometheus/: prometheus.yml
schemas/: asyncapi.yaml  schema.graphql  simulation_config_schema.json  simulation_result_schema.json
sdk-build/: Dockerfile
sdk-output/: schema.graphql
sdk-output/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
sdk-output/typescript/: README.md
src/: main.py
src/api/: server.py  websocket_manager.py
src/backend/: IMPLEMENTATION_PLAN.md  README.md  SERVER_STARTUP.md  run_server.sh
src/capital_allocator/: README.md  __init__.py  allocator.py
src/cashflow_aggregator/: README.md  __init__.py  cashflow_aggregator.py
src/config/: config_loader.py  param_registry.py  validation.py
src/docs/: capital_allocation_loan_generation.md
src/engine/: __init__.py  loan_generator.py  orchestrator.py  price_path.py  simulation_context.py
src/exit_simulator/: README.md  enhanced_exit_simulator.py  exit_simulator.py
src/fee_engine/: README.md  __init__.py  fee_engine.py
src/leverage_engine/: README.md  (+1 more)
tests/: conftest.py
(+740 files in other folders)
